--- a/core/access/Cargo.toml
+++ b/core/access/Cargo.toml
@@ -39,7 +39,9 @@ workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 [dev-dependencies]
 async-trait = { workspace = true }
 obix = { workspace = true, features = ["test-utils"] }
+rand = { workspace = true }
 serde_json = { workspace = true }
+serial_test = { workspace = true }
 tokio = { workspace = true }
 uuid = { workspace = true }
 anyhow = { workspace = true }
