chore: add created internal credit account sets to config

--- a/bats/accounting-init/credit-module-config.json
+++ b/bats/accounting-init/credit-module-config.json
@@ -7,10 +7,14 @@
     "facility_parent_code": "81.01",
     "collateral_parent_code": "81.02",
     "collateral_in_liquidation_parent_code": "81.03",
+    "liquidated_collateral_parent_code": "81.03",
+    "proceeds_from_liquidation_parent_code": "81.03",
     "interest_income_parent_code": "41.01",
     "fee_income_parent_code": "41.02",
     "payment_holding_parent_code": "11.99.0201",
     "uncovered_outstanding_parent_code": "81.06",
+    "disbursed_defaulted_parent_code": "11.02.0203",
+    "interest_defaulted_parent_code": "11.02.0203",
     "short_term_individual_interest_receivable_parent_code": "11.02.0201",
     "short_term_government_entity_interest_receivable_parent_code": "11.02.0201",
     "short_term_private_company_interest_receivable_parent_code": "11.02.0201",
