chore: update credit module config in ui

--- a/bats/lana.yml
+++ b/bats/lana.yml
@@ -19,7 +19,7 @@ app:
   accounting_init:
     chart_of_accounts_seed_path: "./bats/accounting-init/coa.csv"
     chart_of_accounts_opening_date: "2020-01-01"
-    credit_config_path: null
+    credit_config_path: "./bats/accounting-init/credit-module-config.json"
     deposit_config_path: "./bats/accounting-init/deposit-module-config.json"
     chart_of_accounts_integration_config_path: "./bats/accounting-init/accounting-base-config.json"
 time:
