--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ core-access = { path = "core/access" }
 core-accounting = { path = "core/accounting" }
 core-credit = { path = "core/credit" }
 core-credit-collection = { path = "core/credit/collection" }
+core-credit-disbursal = { path = "core/credit/disbursal" }
 core-credit-terms = { path = "core/credit/terms" }
 core-custody = { path = "core/custody" }
 core-customer = { path = "core/customer" }
