refactor: update core-credit-disbursal module and clean up dependencies

--- a/deny.toml
+++ b/deny.toml
@@ -192,6 +192,11 @@ expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
 [[licenses.clarify]]
+crate = "core-credit-disbursal"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
 crate = "core-credit-terms"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
