--- a/lana/notification/Cargo.toml
+++ b/lana/notification/Cargo.toml
@@ -14,6 +14,7 @@ lana-events = { workspace = true }
 core-access = { workspace = true }
 core-credit = { workspace = true }
 core-credit-collection = { workspace = true }
+core-credit-disbursal = { workspace = true }
 core-customer = { workspace = true }
 core-deposit = { workspace = true }
 audit = { workspace = true }
