--- a/typos.toml
+++ b/typos.toml
@@ -22,6 +22,7 @@ extend-exclude = [
 	"dagster/src/dbt_lana_dw/models/outputs/non-regulatory/*",
 	"dagster/generate_es_reports/schemas/*",
 	"dagster/generate_es_reports/reports.yml",
+	"bats/zz-dagster-lana-assets.bats",
 	"dev/keycloak/internal-realm.json",
 	"dev/keycloak/customer-realm.json",
 	"docs/mermaid-init.js",
