--- a/core/credit/collection/Cargo.toml
+++ b/core/credit/collection/Cargo.toml
@@ -42,3 +42,9 @@ rust_decimal = { workspace = true }
 async-trait = { workspace = true }
 schemars = { workspace = true, optional = true }
 workspace-hack = { version = "0.1", path = "../../../workspace-hack" }
+
+[dev-dependencies]
+anyhow = { workspace = true }
+authz = { workspace = true, features = ["test-dummy"] }
+obix = { workspace = true, features = ["test-utils"] }
+tokio = { workspace = true }
