refactor: extract core utilities to lib and add custom lint (#3688)

--- a/core/price/Cargo.toml
+++ b/core/price/Cargo.toml
@@ -6,20 +6,19 @@ edition = "2024"
 [features]
 
 fail-on-warnings = []
-json-schema = ["dep:schemars", "core-money/json-schema"]
+json-schema = ["dep:schemars", "money/json-schema"]
 
 [dependencies]
-core-money = { workspace = true }
+bfx-client = { workspace = true }
+money = { workspace = true }
 
 job = { workspace = true }
 obix = { workspace = true }
 async-trait = { workspace = true }
 futures = { workspace = true }
-reqwest = { workspace = true }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
 serde = { workspace = true }
-serde_json = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
