chore: add default encryption config

--- a/dev/lana.default.yml
+++ b/dev/lana.default.yml
@@ -59,6 +59,7 @@ app:
       repository_name: __repository__
   gotenberg:
     url: http://localhost:3030/
+  encryption: {}
 tracing:
   service_name: lana-dev
 time:
