ci: remove status in ci

--- a/ci/nix-cache/pipeline.yml
+++ b/ci/nix-cache/pipeline.yml
@@ -6,8 +6,7 @@
 #@   "build_release",
 #@   "check_latest_commit",
 #@   "nix_build_and_cache",
-#@   "exec_phase",
-#@   "set_pr_status"
+#@   "exec_phase"
 #@ )
 
 groups:
@@ -46,7 +45,6 @@ jobs:
       params:
         integration_tool: rebase
     - in_parallel:
-      - #@ set_pr_status("Awaiting build slot")
       - task: cache-dev-profile
         config:
           platform: linux
@@ -160,23 +158,8 @@ jobs:
                   cachix watch-exec ${CACHIX_CACHE_NAME} -- nix flake check
       - do:
         - #@ check_latest_commit()
-        - in_parallel:
-          - #@ set_pr_status("Executing phase lana-cli-release")
-          - #@ set_pr_status("Running", context = "lana-cli-release")
-          - do:
-            - #@ next_version_task(resource_name = "prs")
-            - #@ build_release(resource_name = "prs")
-          on_failure:
-            in_parallel:
-            - #@ set_pr_status("Failure (lana-cli-release)", status = "failure")
-            - #@ set_pr_status("Failed", context = "lana-cli-release", status = "failure")
-          on_abort: #@ set_pr_status("Aborted", context = "lana-cli-release", status = "failure")
-          on_error: #@ set_pr_status("Errored", context = "lana-cli-release", status = "error")
-    - in_parallel:
-      - #@ set_pr_status("Complete", context = "lana-cli-release", status = "success")
-      - #@ set_pr_status("Complete", status = "success")
-    on_abort: #@ set_pr_status("Aborted", status = "failure")
-    on_error: #@ set_pr_status("Errored", status = "error")
+        - #@ next_version_task(resource_name = "prs")
+        - #@ build_release(resource_name = "prs")
 
 
 resources:
@@ -190,15 +173,6 @@ resources:
     webhook_token: ((webhook.secret))
 
   - name: prs
-    type: pull-request
-    check_every: 24h
-    webhook_token: ((webhook.secret))
-    source:
-      base_branch: #@ data.values.git_branch
-      repository: #@ data.values.gh_org + "/" + data.values.gh_repository
-      access_token: #@ data.values.github_token
-
-  - name: prs-out
     type: pull-request
     check_every: 24h
     webhook_token: ((webhook.secret))
