--- a/lib/cloud-storage/Cargo.toml
+++ b/lib/cloud-storage/Cargo.toml
@@ -25,4 +25,4 @@ workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 [dev-dependencies]
 tempfile = { workspace = true }
 uuid = { workspace = true }
-rustls = { version = "0.23", default-features = false, features = ["ring"] }
+rustls = { workspace = true }
