refactor: replace PermissionSetName enum with inventory-based strings (#3694)

--- a/core/credit/collection/Cargo.toml
+++ b/core/credit/collection/Cargo.toml
@@ -16,6 +16,7 @@ json-schema = [
 
 [dependencies]
 money = { workspace = true }
+permission-sets-macro = { workspace = true }
 core-credit-terms = { path = "../terms" }
 
 audit = { workspace = true }
