--- a/lana/admin-server/Cargo.toml
+++ b/lana/admin-server/Cargo.toml
@@ -12,6 +12,7 @@ sumsub-testing = ["lana-app/sumsub-testing"]
 [dependencies]
 lana-app = { workspace = true }
 domain-config = { workspace = true, features = ["graphql"] }
+permission-sets-macro = { workspace = true }
 obix = { workspace = true }
 audit = { workspace = true }
 tracing-utils = { workspace = true, features = ["http"] }
@@ -28,6 +29,7 @@ axum = { workspace = true }
 tower-http = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+heck = { workspace = true }
 chrono = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
