--- a/lana/rbac-types/Cargo.toml
+++ b/lana/rbac-types/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2024"
 fail-on-warnings = []
 
 [dependencies]
+permission-sets-macro = { workspace = true }
 dashboard = { workspace = true }
 contract-creation = { workspace = true }
 
@@ -25,7 +26,6 @@ audit = { workspace = true }
 authz = { workspace = true }
 domain-config = { workspace = true }
 
-async-graphql = { workspace = true }
 strum = { workspace = true }
 uuid = { workspace = true }
 thiserror = { workspace = true }
