--- a/lana/app/Cargo.toml
+++ b/lana/app/Cargo.toml
@@ -18,6 +18,7 @@ lana-events = { workspace = true }
 lana-ids = { workspace = true, features = ["graphql"] }
 contract-creation = { workspace = true }
 gotenberg = { workspace = true }
+encryption = { workspace = true }
 
 dashboard = { workspace = true }
 user-onboarding = { workspace = true }
