--- a/core/domain-config/Cargo.toml
+++ b/core/domain-config/Cargo.toml
@@ -10,7 +10,7 @@ ignored = ["async-graphql"]
 fail-on-warnings = []
 test-utils = []
 graphql = ["es-entity/graphql", "dep:async-graphql"]
-json-schema = ["dep:schemars", "es-entity/json-schema"]
+json-schema = ["dep:schemars", "es-entity/json-schema", "encryption/json-schema"]
 
 [dependencies]
 permission-sets-macro = { workspace = true }
@@ -33,7 +33,7 @@ chrono-tz = { workspace = true }
 async-graphql = { workspace = true, optional = true }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 schemars = { workspace = true, optional = true }
-chacha20poly1305 = { workspace = true }
+encryption = { workspace = true }
 
 [dev-dependencies]
 rust_decimal_macros = { workspace = true }
