--- a/deny.toml
+++ b/deny.toml
@@ -252,6 +252,11 @@ expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
 [[licenses.clarify]]
+crate = "encryption"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
 crate = "entity-rollups"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
