--- a/core/custody/Cargo.toml
+++ b/core/custody/Cargo.toml
@@ -32,8 +32,7 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 tracing-macros = { workspace = true }
 tracing-utils = { workspace = true }
-chacha20poly1305 = { workspace = true }
-hex = { workspace = true }
+encryption = { workspace = true }
 schemars = { workspace = true, optional = true }
 uuid = { workspace = true }
 url = { workspace = true }
