fix: pnpm audit

--- a/docs-site/package.json
+++ b/docs-site/package.json
@@ -58,6 +58,8 @@
   },
   "overrides": {
     "lodash": ">=4.17.23",
-    "lodash-es": ">=4.17.23"
+    "lodash-es": ">=4.17.23",
+    "minimatch": ">=10.2.1",
+    "ajv": ">=8.18.0"
   }
 }
