--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "pnpm": {
     "overrides": {
       "lodash-es": ">=4.17.23",
-      "systeminformation": ">=5.31.0"
+      "systeminformation": ">=5.31.0",
+      "minimatch": ">=10.2.1",
+      "ajv": ">=8.18.0"
     }
   }
 }
