ci: only run enforce-pr-limit on non-draft PRs

--- a/.github/workflows/pr-limit.yml
+++ b/.github/workflows/pr-limit.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   enforce-pr-limit:
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - name: Check open PR count and enforce limit
