fix: propagate json-schema flag

--- a/core/custody/Cargo.toml
+++ b/core/custody/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [features]
 fail-on-warnings = []
 graphql = ["dep:async-graphql", "es-entity/graphql"]
-json-schema = ["dep:schemars", "es-entity/json-schema"]
+json-schema = ["dep:schemars", "es-entity/json-schema", "encryption/json-schema"]
 mock-custodian = []
 
 [dependencies]
