feat(dagster): add cross-platform DW target support (BigQuery/Postgres)
Implements Option C: Explicit DW_TARGET environment variable

## Environment Variables
- DW_TARGET: 'bigquery' (default) or 'postgres'
- DW_RAW_SCHEMA: Schema for raw/source data
- DW_DBT_SCHEMA: Schema for dbt model outputs
- DW_PG_*: Postgres connection settings

## Changes

### dbt Configuration
- profiles.yml: Add postgres target, use DW_TARGET for selection
- sources.yml: Use 'schema' instead of 'dataset' (works for both)

### Cross-Platform SQL Macros (macros/cross_db/)
- ident(): Quote identifiers (`col` vs "col")
- array_at(): Array indexing (safe_offset vs 1-indexed)
- split_part_at(): Split string and get element
- array_from_json_strings(): JSON array to SQL array

### Python Code
- New: src/resources/dw.py - Unified DW resource factory
- New: src/dlt_destinations/__init__.py - Destination factory
- Updated: assets/*.py - Use new DW resource

### SQL Files (48 files)
- Converted backtick identifiers to {{ ident() }} macro
- Converted ARRAY/JSON patterns to cross-platform macros

### Documentation
- CROSS_PLATFORM.md: Setup guide and examples
- scripts/convert_to_cross_platform.sh: Conversion helper

## Limitations
- File reports: BigQuery-only (require GCS)
- Some safe_offset() calls remain (manual review needed)

--- a/dagster/src/dbt_lana_dw/profiles.yml
+++ b/dagster/src/dbt_lana_dw/profiles.yml
@@ -1,10 +1,26 @@
+# Cross-platform dbt profiles
+# Select target via DW_TARGET environment variable: "bigquery" or "postgres"
+
 dbt_lana_dw:
-  target: lana-dw
+  target: "{{ env_var('DW_TARGET', 'bigquery') }}"
   outputs:
-    lana-dw:
+
+    # BigQuery target (production default)
+    bigquery:
       type: bigquery
       method: service-account-json
-      project: "{{ env_var('DBT_BIGQUERY_PROJECT') }}"
-      dataset: "{{ env_var('DBT_BIGQUERY_DATASET') }}"
+      project: "{{ env_var('DBT_BIGQUERY_PROJECT', '') }}"
+      dataset: "{{ env_var('DW_DBT_SCHEMA', 'dbt_dev') }}"
       threads: 4
-      keyfile_json: "{{ fromjson(env_var('DBT_BIGQUERY_CREDENTIALS_JSON')) }}"
+      keyfile_json: "{{ fromjson(env_var('DBT_BIGQUERY_CREDENTIALS_JSON', '{}')) }}"
+
+    # Postgres target (local dev / CI)
+    postgres:
+      type: postgres
+      host: "{{ env_var('DW_PG_HOST', 'localhost') }}"
+      port: "{{ env_var('DW_PG_PORT', '5432') | as_number }}"
+      user: "{{ env_var('DW_PG_USER', 'postgres') }}"
+      password: "{{ env_var('DW_PG_PASSWORD', '') }}"
+      dbname: "{{ env_var('DW_PG_DATABASE', 'lana_dw') }}"
+      schema: "{{ env_var('DW_DBT_SCHEMA', 'dbt') }}"
+      threads: 4
