--- a/dagster/src/dbt_lana_dw/models/sources.yml
+++ b/dagster/src/dbt_lana_dw/models/sources.yml
@@ -2,7 +2,7 @@ version: 2
 
 sources:
   - name: lana
-    dataset: "{{ env_var('TARGET_BIGQUERY_DATASET', '') }}"
+    schema: "{{ env_var('DW_RAW_SCHEMA', 'raw') }}"
     tables:
 
       - name: cala_account_set_member_account_sets
@@ -48,7 +48,7 @@ sources:
       - name: core_chart_node_events
 
   - name: bitfinex
-    dataset: "{{ env_var('TARGET_BIGQUERY_DATASET', '') }}"
+    schema: "{{ env_var('DW_RAW_SCHEMA', 'raw') }}"
     tables:
 
       - name: bitfinex_order_book_dlt
@@ -60,7 +60,7 @@ sources:
       - name: bitfinex_trades_dlt
 
   - name: sumsub
-    dataset: "{{ env_var('TARGET_BIGQUERY_DATASET', '') }}"
+    schema: "{{ env_var('DW_RAW_SCHEMA', 'raw') }}"
     tables:
 
       - name: sumsub_applicants_dlt
