--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -1,10 +1,8 @@
-[test-groups]
-# core-price and core-credit tests share a PostgreSQL database and the
-# ephemeral_outbox_events NOTIFY channel.  When they run in parallel the
-# credit test's seed_price (hardcoded 7_000_000) leaks into the price
-# test's listener and overwrites its watch channel, causing flaky failures.
-ephemeral-price-events = { max-threads = 1 }
+# core-price and core-credit share a PostgreSQL NOTIFY channel for ephemeral
+# price events. core-credit's seed_price helper can leak into core-price's
+# listener, causing flaky failures. Run core-price tests exclusively to
+# prevent cross-package interference.
 
 [[profile.default.overrides]]
-filter = 'package(core-price) | package(core-credit)'
-test-group = 'ephemeral-price-events'
+filter = 'package(core-price)'
+threads-required = "num-test-threads"
