--- a/docs-site/package.json
+++ b/docs-site/package.json
@@ -57,5 +57,10 @@
   },
   "engines": {
     "node": ">=18.0"
+  },
+  "overrides": {
+    "serve-handler": {
+      "minimatch": ">=3.1.3"
+    }
   }
 }
