--- a/deny.toml
+++ b/deny.toml
@@ -152,6 +152,11 @@ expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
 [[licenses.clarify]]
+crate = "admin-graphql-reports"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
 crate = "audit"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
