--- a/lana/admin-server/Cargo.toml
+++ b/lana/admin-server/Cargo.toml
@@ -12,6 +12,7 @@ sumsub-testing = ["lana-app/sumsub-testing"]
 [dependencies]
 lana-app = { workspace = true }
 admin-graphql-access = { workspace = true }
+admin-graphql-reports = { workspace = true }
 admin-graphql-shared = { workspace = true }
 domain-config = { workspace = true, features = ["graphql"] }
 obix = { workspace = true }
