--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,8 @@ domain-config = { path = "core/domain-config" }
 
 # Lana dependencies
 admin-graphql-access = { path = "lana/admin-graphql-access" }
+admin-graphql-config = { path = "lana/admin-graphql-config" }
+admin-graphql-contracts = { path = "lana/admin-graphql-contracts" }
 admin-graphql-reports = { path = "lana/admin-graphql-reports" }
 admin-graphql-shared = { path = "lana/admin-graphql-shared" }
 admin-server = { path = "lana/admin-server" }
