--- a/deny.toml
+++ b/deny.toml
@@ -147,6 +147,16 @@ expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
 [[licenses.clarify]]
+crate = "admin-graphql-config"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
+crate = "admin-graphql-contracts"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
 crate = "admin-graphql-shared"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
