--- a/lana/admin-server/Cargo.toml
+++ b/lana/admin-server/Cargo.toml
@@ -12,6 +12,8 @@ sumsub-testing = ["lana-app/sumsub-testing"]
 [dependencies]
 lana-app = { workspace = true }
 admin-graphql-access = { workspace = true }
+admin-graphql-config = { workspace = true }
+admin-graphql-contracts = { workspace = true }
 admin-graphql-reports = { workspace = true }
 admin-graphql-shared = { workspace = true }
 domain-config = { workspace = true, features = ["graphql"] }
@@ -31,10 +33,8 @@ axum = { workspace = true }
 tower-http = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-chrono = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
-rust_decimal = { workspace = true }
 anyhow = { workspace = true }
 
 futures = { workspace = true }
