chore(admin-server): extract graphql modules into smaller crates

--- a/lana/admin-graphql-custody/Cargo.toml
+++ b/lana/admin-graphql-custody/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "admin-graphql-reports"
+name = "admin-graphql-custody"
 license = "BUSL-1.1"
 edition = "2024"
 
@@ -8,6 +8,7 @@ lana-app = { workspace = true }
 admin-graphql-shared = { path = "../admin-graphql-shared" }
 async-graphql = { workspace = true }
 es-entity = { workspace = true }
+url = { workspace = true }
 
 [package.metadata.cargo-machete]
 ignored = ["es-entity"]
