--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,11 @@ domain-config = { path = "core/domain-config" }
 admin-graphql-access = { path = "lana/admin-graphql-access" }
 admin-graphql-config = { path = "lana/admin-graphql-config" }
 admin-graphql-contracts = { path = "lana/admin-graphql-contracts" }
+admin-graphql-custody = { path = "lana/admin-graphql-custody" }
+admin-graphql-documents = { path = "lana/admin-graphql-documents" }
+admin-graphql-governance = { path = "lana/admin-graphql-governance" }
 admin-graphql-reports = { path = "lana/admin-graphql-reports" }
+admin-graphql-session = { path = "lana/admin-graphql-session" }
 admin-graphql-shared = { path = "lana/admin-graphql-shared" }
 admin-server = { path = "lana/admin-server" }
 contract-creation = { path = "lana/contract-creation" }
