--- a/deny.toml
+++ b/deny.toml
@@ -157,12 +157,32 @@ expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
 [[licenses.clarify]]
+crate = "admin-graphql-custody"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
+crate = "admin-graphql-documents"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
+crate = "admin-graphql-governance"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
 crate = "admin-graphql-shared"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
 [[licenses.clarify]]
 crate = "admin-graphql-reports"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
+crate = "admin-graphql-session"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
