--- a/lana/cli/Cargo.toml
+++ b/lana/cli/Cargo.toml
@@ -38,4 +38,5 @@ sqlx = { workspace = true }
 log = { workspace = true }
 hex = { workspace = true }
 chacha20poly1305 = { workspace = true }
+encryption = { workspace = true }
 rustls = { workspace = true }
