--- a/core/credit/Cargo.toml
+++ b/core/credit/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [features]
 
 fail-on-warnings = []
-graphql = ["dep:async-graphql", "cala-ledger/graphql", "es-entity/graphql", "core-credit-collection/graphql", "core-credit-terms/graphql"]
+graphql = ["dep:async-graphql", "cala-ledger/graphql", "es-entity/graphql", "core-credit-collection/graphql", "core-credit-collateral/graphql", "core-credit-terms/graphql"]
 json-schema = [
     "dep:schemars",
     "cala-ledger/json-schema",
@@ -16,6 +16,7 @@ json-schema = [
     "core-price/json-schema",
     "public-id/json-schema",
     "core-credit-collection/json-schema",
+    "core-credit-collateral/json-schema",
     "core-credit-terms/json-schema",
 ]
 mock-custodian = ["core-custody/mock-custodian"]
@@ -27,6 +28,7 @@ core-price = { workspace = true }
 core-customer = { workspace = true }
 core-credit-collection = { path = "collection" }
 core-time-events = { workspace = true }
+core-credit-collateral = { path = "collateral" }
 core-credit-terms = { path = "terms" }
 core-custody = { workspace = true }
 governance = { workspace = true }
