--- a/lana/rbac-types/Cargo.toml
+++ b/lana/rbac-types/Cargo.toml
@@ -16,6 +16,7 @@ governance = { workspace = true }
 core-access = { workspace = true }
 core-customer = { workspace = true }
 core-credit = { workspace = true }
+core-credit-collateral = { workspace = true }
 core-credit-collection = { workspace = true }
 core-credit-terms = { workspace = true }
 core-custody = { workspace = true }
