chore: Fix graphql layer imports

--- a/lana/app/Cargo.toml
+++ b/lana/app/Cargo.toml
@@ -31,6 +31,7 @@ money = { workspace = true, features = ["graphql"] }
 core-access = { workspace = true, features = ["graphql"] }
 core-custody = { workspace = true, features = ["graphql"] }
 core-credit = { workspace = true, features = ["graphql"] }
+core-credit-collateral = { workspace = true, features = ["graphql"] }
 core-credit-terms = { workspace = true }
 core-customer = { workspace = true, features = ["graphql"] }
 core-price = { workspace = true }
