--- a/core/credit/collateral/Cargo.toml
+++ b/core/credit/collateral/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [features]
 fail-on-warnings = []
-graphql = ["es-entity/graphql", "cala-ledger/graphql"]
+graphql = ["es-entity/graphql", "cala-ledger/graphql", "dep:async-graphql"]
 json-schema = [
     "dep:schemars",
     "es-entity/json-schema",
@@ -46,6 +46,7 @@ uuid = { workspace = true }
 derive_builder = { workspace = true }
 rust_decimal = { workspace = true }
 async-trait = { workspace = true }
+async-graphql = { workspace = true, optional = true }
 schemars = { workspace = true, optional = true }
 
 [dev-dependencies]
