--- a/lib/encryption/Cargo.toml
+++ b/lib/encryption/Cargo.toml
@@ -15,6 +15,8 @@ tracing = { workspace = true }
 tracing-utils = { workspace = true }
 schemars = { workspace = true, optional = true }
 chacha20poly1305 = { workspace = true }
+sha2 = { workspace = true }
+hex = { workspace = true }
 
 [dev-dependencies]
 serde_json = { workspace = true }
