--- a/deny.toml
+++ b/deny.toml
@@ -102,7 +102,6 @@ allow = [
     "LicenseRef-BUSL-1.1",
     "CDLA-Permissive-2.0",
     "0BSD",
-    "OpenSSL",
 ]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
@@ -193,6 +192,11 @@ license-files = []
 
 [[licenses.clarify]]
 crate = "core-credit"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
+crate = "core-credit-collateral"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
