--- a/deny.toml
+++ b/deny.toml
@@ -147,6 +147,11 @@ expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
 [[licenses.clarify]]
+crate = "admin-graphql-accounting"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
 crate = "admin-graphql-audit"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
@@ -162,12 +167,27 @@ expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
 [[licenses.clarify]]
+crate = "admin-graphql-customer"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
+crate = "admin-graphql-credit"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
 crate = "admin-graphql-custody"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
 [[licenses.clarify]]
 crate = "admin-graphql-documents"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
+crate = "admin-graphql-deposit"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
