--- a/lana/admin-graphql-price/Cargo.toml
+++ b/lana/admin-graphql-price/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 lana-app = { workspace = true }
 async-graphql = { workspace = true }
+futures = { workspace = true }
+obix = { workspace = true }
