--- a/lana/admin-graphql-reports/Cargo.toml
+++ b/lana/admin-graphql-reports/Cargo.toml
@@ -8,6 +8,8 @@ lana-app = { workspace = true }
 admin-graphql-shared = { path = "../admin-graphql-shared" }
 async-graphql = { workspace = true }
 es-entity = { workspace = true }
+futures = { workspace = true }
+obix = { workspace = true }
 
 [package.metadata.cargo-machete]
 ignored = ["es-entity"]
