--- a/dagster/Dockerfile
+++ b/dagster/Dockerfile
@@ -32,9 +32,9 @@ RUN pip install \
 RUN pip install \
     dbt-core~=1.10.3 \
     dbt-bigquery~=1.10.3 \
-    dlt[bigquery]~=1.18.1 \
+    dbt-postgres~=1.10.3 \
+    dlt[bigquery,postgres]~=1.18.1 \
     dagster-dlt~=${DAGSTER_EXT_VERSION} \
-    dbt-bigquery~=1.10.3 \
     pandas \
     requests
 
