--- a/deny.toml
+++ b/deny.toml
@@ -102,6 +102,7 @@ allow = [
     "LicenseRef-BUSL-1.1",
     "CDLA-Permissive-2.0",
     "0BSD",
+    "OpenSSL",
 ]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
