--- a/deny.toml
+++ b/deny.toml
@@ -197,6 +197,11 @@ expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
 [[licenses.clarify]]
+crate = "core-credit-collateral"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
 crate = "core-credit-collection"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
