--- a/core/credit/Cargo.toml
+++ b/core/credit/Cargo.toml
@@ -39,6 +39,7 @@ audit = { workspace = true }
 authz = { workspace = true }
 obix = { workspace = true }
 job = { workspace = true }
+command-job = { workspace = true }
 cloud-storage = { workspace = true }
 public-id = { workspace = true }
 
