--- a/core/credit/collateral/Cargo.toml
+++ b/core/credit/collateral/Cargo.toml
@@ -22,6 +22,7 @@ audit = { workspace = true }
 authz = { workspace = true }
 obix = { workspace = true }
 job = { workspace = true }
+command-job = { path = "../../../lib/command-job" }
 
 cala-ledger = { workspace = true }
 es-entity = { workspace = true }
