--- a/lana/cli/Cargo.toml
+++ b/lana/cli/Cargo.toml
@@ -19,6 +19,7 @@ chrono = { workspace = true }
 lana-app = { workspace = true }
 admin-server = { workspace = true }
 customer-server = { workspace = true }
+lanacli = { workspace = true }
 
 sim-bootstrap = { workspace = true, optional = true }
 
