--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ members = [
   "dev/entity-rollups",
   "dev/custom-lints",
   "dev/public-events-schema",
-  "dev/lanacli",
+  "dev/lana-admin-cli",
 ]
 exclude = [
   "core/credit/src",
@@ -69,7 +69,7 @@ customer-server = { path = "lana/customer-server" }
 customer-sync = { path = "lana/customer-sync" }
 dashboard = { path = "lana/dashboard" }
 deposit-sync = { path = "lana/deposit-sync" }
-lanacli = { path = "dev/lanacli" }
+lana-admin-cli = { path = "dev/lana-admin-cli" }
 lana-app = { path = "lana/app" }
 lana-events = { path = "lana/events" }
 lana-ids = { path = "lana/ids" }
