--- a/deny.toml
+++ b/deny.toml
@@ -412,7 +412,7 @@ expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
 [[licenses.clarify]]
-crate = "lanacli"
+crate = "lana-admin-cli"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
