--- a/dev/lana-admin-cli/Cargo.toml
+++ b/dev/lana-admin-cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lanacli"
+name = "lana-admin-cli"
 version = "0.1.0"
 license = "BUSL-1.1"
 edition = "2024"
@@ -8,7 +8,7 @@ edition = "2024"
 fail-on-warnings = []
 
 [[bin]]
-name = "lanacli"
+name = "lana-admin-cli"
 path = "src/main.rs"
 
 [dependencies]
