--- a/core/deposit/Cargo.toml
+++ b/core/deposit/Cargo.toml
@@ -21,7 +21,7 @@ money = { workspace = true }
 permission-sets-macro = { workspace = true }
 governance = { workspace = true }
 core-customer = { workspace = true }
-core-accounting-primitives = { workspace = true }
+chart-primitives = { workspace = true }
 domain-config = { workspace = true }
 public-id = { workspace = true }
 
