--- a/core/credit/Cargo.toml
+++ b/core/credit/Cargo.toml
@@ -32,7 +32,7 @@ core-credit-collateral = { path = "collateral" }
 core-credit-terms = { path = "terms" }
 core-custody = { workspace = true }
 governance = { workspace = true }
-core-accounting-primitives = { workspace = true }
+chart-primitives = { workspace = true }
 domain-config = { workspace = true }
 
 audit = { workspace = true }
