--- a/deny.toml
+++ b/deny.toml
@@ -182,7 +182,7 @@ expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
 [[licenses.clarify]]
-crate = "core-accounting-primitives"
+crate = "core-chart-primitives"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
